# UAVCAN-GUI

./: .gitignore  CMakeLists.txt  gnsswidget.cpp  gnsswidget.h  mainwindow.cpp  mainwindow.h  map_view.qml  networkinterface.cpp  networkinterface.h  plotterWidget.cpp  plotterWidget.h  resource.qrc  style.qss  uavcandecoder.cpp  uavcandecoder.h  uavcanmonitor.cpp  uavcanmonitor.h  udpwindow.cpp  udpwindow.h
Uavcan/: dronecan.json  uavcandecoder.cpp  uavcandecoder.h
Widget/: gnsswidget.h  plotterWidget.h  uavcanmonitor.cpp  uavcanmonitor.h  udpwindow.cpp  udpwindow.h
